Show pass value and link to transactions

--- a/templates/event_passes.html
+++ b/templates/event_passes.html
@@ -77,13 +77,17 @@
                     <details class="bg-gray-50 px-3 py-2 rounded">
                         <summary class="flex space-x-4 items-center cursor-pointer">
                             <span class="font-mono text-blue-800 font-bold uppercase">{{ pass.id }}</span>
-                            <span class="flex-grow w-24"></span>
+                            <span class="flex-grow w-24 text-right">{{ pass.value }}</span>
                         </summary>
                         <div class="mt-2 flex flex-col space-y-2">
                             <div class="flex items-center space-x-2">
                                 <i class="far fa-clock"></i>
                                 <span>Created at {{ pass.created_at.strftime("%Y-%m-%d %H:%M:%S") }}</span>
                             </div>
+                            <a href="/pass/{{ pass.id }}/transactions" class="flex items-center space-x-2 text-blue-800 cursor-pointer">
+                                <i class="far fa-money-bill-wave"></i>
+                                <span>Show transactions</span>
+                            </a>
                             <form action="/pass/{{ pass.id }}" method="post">
                                 <input type="hidden" name="csrf" value="{{ session.csrf_token }}"></input>
                                 <textarea id="extra-info" name="extra-info" placeholder="Extra info for pass" rows="4" class="px-3 py-2 w-full border border-gray-200 rounded">{{ pass.extra_info if pass.extra_info else "" }}</textarea>
