--- a/templates/pass_management.html
+++ b/templates/pass_management.html
@@ -11,8 +11,8 @@
     {% endif %}
     <form class="border-t pt-3 flex flex-col ">
         <input type="number" id="value-delta" name="value-delta" value="1" min="1" max="10000"></input>
-        {% if permissions.can_topup %} <button type="button" onClick="post(valueDelta.value)">Add</button> {% endif %}
-        {% if permissions.can_deduct %} <button type="button" onClick="post(-valueDelta.value)">Deduct</button> {% endif %}
+        {% if permissions.can_topup %} <button type="button" class="px-3 py-2 text-lg text-blue-800" onClick="post(valueDelta.value)">Add</button> {% endif %}
+        {% if permissions.can_deduct %} <button type="button" class="px-3 py-2 text-lg text-blue-800" onClick="post(-valueDelta.value)">Deduct</button> {% endif %}
     </form>
 </div>
 <script>
